# kleeborp

./: .gitignore  LICENSE.md  README.md  config.example.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
assets/sounds/: README.md
memory/memories.db/: chroma.sqlite3
src/: run.py
src/core/: application.py  config.py  event_bus.py  module_manager.py
src/events/: __init__.py  base.py  handlers.py  types.py
src/modules/: base.py
src/modules/brain/: brain_module.py
src/modules/discord/: bot.py  discord_module.py  voice_manager.py
src/modules/discord/audio/: audio_input.py  vad.py
src/modules/games/: game_module.py
src/modules/memory/: memory_module.py  rag_database.py
src/modules/persona/: persona_module.py
src/modules/tools/: internal_tools.py  mcp_module.py  tool_registry.py  tools_module.py
src/modules/tools/internal/: __init__.py  base.py  sfx.py  vision.py
src/modules/tools/internal/discord/: messaging.py
src/modules/tts/: tts_module.py  tts_module_old.py
src/modules/whisper/: whisper_module.py
src/prompts/: prompts.py
src/prompts/texts/: constraints.txt  games.txt  identity.txt  memory.txt  response.txt  style.txt
src/services/: llm_client.py  websocket_server.py
src/utils/: audio_debug.py  logger.py  pcm_audio.py  user_name_to_name.py
web-app/: nuxt.config.ts  package.json  pnpm-lock.yaml
web-app/app/: app.vue
web-app/app/components/: ModuleState.vue  NavHeader.vue
web-app/app/composables/: useAppWebSocket.ts
web-app/app/pages/: index.vue
